--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -3,10 +3,8 @@ body {
 }
 
 .wrapper {
-    background-image: url(../images/bg-default.jpg);
+    background: url(../images/bg-default.jpg) no-repeat center;
     background-attachment: fixed;
-    width: 100%;
-    height: 1080px;
     position: relative;
 }
 
@@ -23,7 +21,7 @@ body {
     position: relative;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 0 auto;
     padding: 50px 0;
     width: 70%;
