--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,6 +2,7 @@
 
 body {
     font-family: 'Noto Sans TC', sans-serif;
+    line-height: 1.5;
 }
 
 .wrapper {
@@ -73,10 +74,14 @@ body {
                 text-overflow: ellipsis;
 
                 &.title {
-                    margin-bottom: 5px;
+                    font-size: 16px;
+                }
+
+                &.name {
+                    font-size: 14px;
+                    font-weight: 300;
                 }
             }
-
         }
     }
 }
