圖片 Placeholder： - 使用圖片載入事件 onload，圖片下載完成後將背景設定為 none。

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -70,6 +70,10 @@ body {
 
 
             .avatar {
+                background-image: url(../../includes/images/img_avatar.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: contain;
                 border-radius: 50%;
                 vertical-align: middle;
                 width: 50px;
