[走向國際：i18n] 新增切語言流程：     1. 按下語言         1.1 設定目前的語言 currentLang，從 data attribute 上取得         1.2 刪除目前的直播列表         1.3 重新呼叫 getStreams()     2. highlight 語言選項         2.1 先刪除 active class         2.2 針對點擊的 target 加上 active class

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,36 @@ body {
         height: 100%;
     }
 
+    header {
+        padding: 20px;
+        position: relative;
+
+        .title {
+            color: #fff;
+            margin: 0;
+            text-align: center;
+        }
+
+        .lang-switch {
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            list-style: none;
+            padding: 0;
+            text-align: center;
+
+            li {
+                cursor: pointer;
+                margin: 0 10px;
+                
+                &:hover,
+                &.active {
+                    color: lightblue;
+                }
+            }
+        }
+    }
+
     .container {
         position: relative;
         display: flex;
